--- a/chat w/css.sass
+++ b/chat w/css.sass
@@ -68,7 +68,7 @@ html, body
                     color: gray
                     display: flex
                     // bottom: 0.5px
-                    margin-top: 1rem
+                    margin-top: 60rem
                     padding-right: 5px
 
 #tac
@@ -163,7 +163,7 @@ html, body
 .c2
 
     justify-content: right
-    border: 1px solid red
+    // border: 1px solid red
 
 #visto
     color: #34b7f1
@@ -185,3 +185,11 @@ html, body
     width: max-content
     position: relative
 
+#tonta
+    width: 5rem
+    height: 10rem
+
+
+#diosito
+    height: 15rem
+    width: 0
